added shapes colors and sound successfully to level one

--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="gameArea">
-    <div id="cards">
-      <div id="leftCard" class="card">Circle</div>
-      <div id="rightCard" class="card">Square</div>
-    </div>
-    <div id="centerCard" class="card" style="display: none;"></div>
-    <div id="instruction"></div>
-  </div>
+    <div id="gameArea">
+        <div id="cards">
+          <div id="leftCard" class="card">
+            <div class="shape"></div>
+          </div>
+          <div id="rightCard" class="card">
+            <div class="shape"></div>
+          </div>
+        </div>
+        <div id="centerCard" class="card" style="display: none;">
+          <div class="shape"></div>
+        </div>
+        <div id="instruction"></div>
+      </div>      
   <script src="script.js"></script>
 </body>
 </html>
