--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <div class="shape"></div>
         </div>
         <div id="instruction"></div>
+        <button id="downloadBtn" style="display: none;">Download Data</button>
       </div>      
   <script src="script.js"></script>
 </body>
