--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cognitive Game</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div id="gameArea">
-        <div id="cards">
-          <div id="leftCard" class="card">
-            <div class="shape"></div>
-          </div>
-          <div id="rightCard" class="card">
-            <div class="shape"></div>
-          </div>
-        </div>
-        <div id="centerCard" class="card" style="display: none;">
-          <div class="shape"></div>
-        </div>
-        <div id="instruction"></div>
-        <button id="downloadBtn" style="display: none;">Download Data</button>
-      </div>      
+  <div id="gameArea">
+    <!-- Reference cards container -->
+    <div id="referenceCards">
+      <div id="leftCard" class="card">
+        <div class="shape"></div>
+      </div>
+      <div id="rightCard" class="card">
+        <div class="shape"></div>
+      </div>
+    </div>
+    <!-- Center card -->
+    <div id="centerCard" class="card" style="display: none;">
+      <div class="shape"></div>
+    </div>
+    <!-- Instruction area -->
+    <div id="instruction"></div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
